--- a/src/main/resources/kr/or/ddit/config/db/dbinfo.properties
+++ b/src/main/resources/kr/or/ddit/config/db/dbinfo.properties
@@ -3,6 +3,6 @@
 # key\uac12=value\uac12 \uacfc \uac19\uc740 \ubaa8\uc591\uc73c\ub85c \ub9cc\ub4ed\ub2c8\ub2e4.
 
 jdbc.driverClassName=oracle.jdbc.driver.OracleDriver
-jdbc.url=jdbc:oracle:thin:@112.220.114.130:1521:xe
+jdbc.url=jdbc:oracle:thin:@localhost:1521:xe
 jdbc.userName=yez
 jdbc.password=java
