spring mvc  . Interceptor 설정  . performanceCheckInterceptor  . sessionCheckInterceptor  . 국제화  . 중간 프로젝트 spring migration  . hello/hello 기본 스프링 프레임워크 설정  . 사용자 리스트 ajax 처리

--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
   
   <properties>
   	<java.version>1.8</java.version>
+  	<project.build.sourceEncoding>utf-8</project.build.sourceEncoding>
   	<spring.version>4.3.30.RELEASE</spring.version>
   </properties>
   
@@ -18,6 +19,7 @@
   			<configuration>
   				<source>${java.version}</source>
   				<target>${java.version}</target>
+  				<encoding>utf-8</encoding>
   			</configuration>
   		</plugin>
   	</plugins>
