--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -22,13 +22,15 @@
   </listener>
   
   
-  
+  <!-- 서블릿이 하나는 들어간다고 했어. ???맞나? -->
   <servlet>
   	<servlet-name>dispatcherServlet</servlet-name>
   	<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
   	<init-param>
   		<param-name>contextConfigLocation</param-name>
-  		<param-value>classpath:/kr/or/ddit/config/spring/application-context.xml</param-value>
+  		<param-value>classpath:/kr/or/ddit/config/spring/application-context.xml
+  		</param-value>
+<!-- 개발중엔 잠깐 주석  					classpath:/kr/or/ddit/config/spring/interceptor-context.xml -->
   	</init-param>
   </servlet>
   <servlet-mapping>
