--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,13 @@
 	    <artifactId>spring-context</artifactId>
 	    <version>${spring.version}</version>
 	</dependency>
+	
+  	<!-- https://mvnrepository.com/artifact/org.springframework/spring-context -->
+	<dependency>
+	    <groupId>org.springframework</groupId>
+	    <artifactId>spring-aop</artifactId>
+	    <version>${spring.version}</version>
+	</dependency>
   
   	<!-- https://mvnrepository.com/artifact/org.springframework/spring-core -->
 	<dependency>
@@ -188,6 +195,13 @@
 	    <version>3.0.8</version>
 	</dependency>
 		
+	<!-- https://mvnrepository.com/artifact/org.aspectj/aspectjweaver -->
+	<dependency>
+	    <groupId>org.aspectj</groupId>
+	    <artifactId>aspectjweaver</artifactId>
+	    <version>1.9.6</version>
+	   <!--  <scope>runtime</scope> -->
+	</dependency>
 	
 	
 	
